Changed images to jpg

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
     const bandMembers = [
       {
         name: "Buck “Strummer” Rawhide – Guitar",
-        img: "images/guitar-bull.png",
+        img: "images/guitar-bull.jpg",
         bio: "Philosopher. Picker. Mood-setter. Buck’s hooves were born to pluck. 'A well-placed E minor can settle a stampede.'"
       },
       {
         name: "Lester “Moo-tone” Brassley – Saxophone",
-        img: "images/sax-bull.png",
+        img: "images/sax-bull.jpg",
         bio: "Blew his first sax at a cattle auction. Lester’s solos are smoother than a fresh salt lick. He claims Coltrane appeared to him in a dream... eating clover."
       },
       {
         name: "Roscoe “Low-End” Angus – Upright Bass",
-        img: "images/bass-bull.png",
+        img: "images/bass-bull.jpg",
         bio: "Quiet but deep, Roscoe lays down grooves that make even the surliest ranch hands sway. Only communicates via bass licks and eyebrow raises."
       },
       {
         name: "Clara “Tippy Keys” Belle – Piano",
-        img: "images/piano-bull.png",
+        img: "images/piano-bull.jpg",
         bio: "Classically trained barn prodigy turned boogie-woogie barnstormer. Clara ditched concert halls for campfires and can go from Chopin to honky-tonk in under four beats."
       },
       {
         name: "Duke “Four-on-the-Hoof” Holstein – Drums",
-        img: "images/drum-bull.png",
+        img: "images/drum-bull.jpg",
         bio: "Born with rhythm in his veins and cud in his mouth, Duke drives the band with hoof-tight beats and a grin that never quits. Practices on feed buckets when bored."
       }
     ];
