pronounced moo-riff

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
   </style>
 </head>
 <body>
+  <header style="margin-bottom: 2rem;">
+    <h1 style="font-size: 3rem; letter-spacing: 0.1em; margin-bottom: 0.2rem;">MURIFF</h1>
+    <h2 style="font-weight: normal; font-size: 1.25rem; font-style: italic; color: #5a4a3f;">
+      (pronounced “moo-riff”)
+    </h2>
+  </header>
   <h1>🎷 Meet a Member of the Hornless Hereford Jazz Band</h1>
   <h2>Randomly featured Muriff artist</h2>
 
