Two line for Meet a...

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
       (pronounced “moo-riff”)
     </h2>
   </header>
-  <h1>🎷 Meet a Member of the Hornless Hereford Jazz Band</h1>
+  <h1>
+   🎷 Meet a Member of the<br>
+    Hornless Hereford Jazz Band
+  </h1>
   <h2>Randomly featured Muriff artist</h2>
 
   <div id="band-container">
