--- a/index.html
+++ b/index.html
@@ -87,5 +87,23 @@
     document.getElementById('band-img').alt = pick.name;
     document.getElementById('band-bio').innerHTML = `<strong>${pick.name}</strong><br>${pick.bio}`;
   </script>
+  <hr style="margin: 3rem 0;">
+
+  <h2>📝 Band Diary</h2>
+  <p><em>Notes from the pasture — updated whenever inspiration (or conflict) strikes.</em></p>
+
+  <div class="diary-entry" style="max-width: 600px; margin: 2rem auto; text-align: left;">
+    <p><strong>2025-07-16</strong><br>
+    Hello from the band! We’re really excited to be helping out with the new Fort Worth-based music forum. We don’t know what it is yet, but it smells like potential (and alfalfa).</p>
+
+  <!--
+    <p><strong>2025-07-18</strong><br>
+    Roscoe keeps detuning the upright bass to match his “inner groove.” We’re not mad, just confused.</p>
+
+    <p><strong>2025-07-20</strong><br>
+    Lester “Moo-tone” is starting drama again. Says the band can’t call itself hornless if he’s holding a sax. He's technically right. But emotionally exhausting.</p>
+  -->
+  </div>
+
 </body>
 </html>
