--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <hr style="margin: 3rem 0;">
 
   <h2>📝 Band Diary</h2>
-  <p><em>Notes from the pasture — updated whenever inspiration (or conflict) strikes.</em></p>
+  <p><em>Notes from the pasture — updated whenever<br>inspiration (or conflict) strikes.</em></p>
 
   <div class="diary-entry" style="max-width: 600px; margin: 2rem auto; text-align: left;">
     <p><strong>2025-07-16</strong><br>
